# b3_bem

./: README.md  design_brief.typ  pyproject.toml
.github/workflows/: ci.yml
examples/: blade_test.yml  ex1.py  ex2.py
resources/: ccblade_install.py
src/b3_bem/cli/: cli.py  yml_portable.py
src/b3_bem/core/: ccblade.py  fixed.py  optimizer.py  runner.py  step.py
src/b3_bem/geom_app/: loft_utils.py
src/b3_bem/plots/: __init__.py  bladeloads.py  planform.py  plots.py  plotter.py  polars.py  rotor.py
src/b3_bem/utils/: loft_utils.py  utils.py
tests/: test_cli.py  test_fixed.py  test_optimizer.py  test_plots.py  test_runner.py  test_step.py  test_utils.py  test_yml_portable.py
