[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "b3_bem"
version = "0.1.1"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "CCBlade",
    # "ccblade @ file:///home/wr1/projects/CCBlade",
    "rich",
    # "statesman",
    "statesman @ git+https://github.com/wr1/projects/statesman.git",
    "treeparse",
    "ruamel.yaml",
    "pydantic",
    "pytest",
]

[project.scripts]
"b3-bem" = "b3_bem.cli.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=src/b3_bem --cov-report=term"
